@startuml
title Class Diagram Sistem E-Commerce Butik Busana Fashion (PWA)

skinparam classAttributeIconSize 0
skinparam shadowing false
hide circle

class Role {
  # id : String
  # name : String
}

class User {
  # id : String
  # email : String
  # password : String
  # nickname : String
  # slug : String
  # profilePhoto : String
  # phones : String[]
  # addresses : Json[]
  # roleId : String
  + register()
  + login()
  + logout()
  + getMe()
}

class Collection {
  # id : String
  # name : String
  # slug : String
  # imageUrl : String
  # numberOfProducts : Int
  + getCollections()
  + getCollectionBySlug()
}

class Product {
  # id : String
  # name : String
  # slug : String
  # price : Float
  # discountedPrice : Float
  # quantity : Int
  # weight : Float
  # media : Json[]
  # variants : Json[]
  # collectionIds : String[]
  + getProducts()
  + getProductBySlug()
}

class Cart {
  # id : String
  # userId : String
  # lineItems : Json[]
  + getCart()
  + addItem()
  + removeItem()
  + updateQuantity()
  + deleteCart()
}

class LineItemKeranjang {
  # productId : String
  # variantId : String
  # quantity : Int
  # price : Float
  # productName : String
  # image : String
}

class Order {
  # id : String
  # orderNumber : String
  # userId : String
  # status : String
  # paymentStatus : String
  # lineItems : Json[]
  # subtotal : Float
  # shippingCost : Float
  # total : Float
  # recipientName : String
  # recipientPhone : String
  # address : String
  # layananKurir : String
  # catatan : String
  # metodePembayaran : String
  # paymentDeadlineReminder30SentAt : DateTime
  # paymentDeadlineReminder15SentAt : DateTime
  # paymentDeadlineReminder5SentAt : DateTime
  + getOrders()
  + getOrder()
  + createOrder()
  + orderTokenizer()
  + cancelOrder()
  + getOngkir()
}

class PushSubscription {
  # id : String
  # userId : String
  # guestKey : String
  # endpoint : String
  # p256dh : String
  # auth : String
  # userAgent : String
  + subscribe()
  + unsubscribe()
  + sendPushToUser()
  + sendPushToGuestKey()
}

class Midtrans {
  + createTransactionToken()
  + kirimNotifikasiWebhook()
}

class SistemCron {
  + paymentDeadlineReminder()
  + cancelExpiredOrders()
}

User "*" -- "1" Role
User "1" -- "0..1" Cart
User "1" -- "0..*" Order
User "1" -- "0..1" PushSubscription
Cart "1" *-- "0..*" LineItemKeranjang
Product ..> Collection
LineItemKeranjang ..> Product
Order ..> Product
Midtrans ..> Order
SistemCron ..> Order
SistemCron ..> PushSubscription

@enduml